﻿8.2.0 (next)
------------------
+ [enhancement [fj-core] fixed all major sonar cloud issues [8.2.0-rc.6]
+ [enhancement [fj-core] loadConfigSafe() method introduced for property catalog [8.2.0-rc.6]
+ [enhancement [fj-core] JavaGenerator generate() throw chaanged from Exception to IOException [8.2.0-rc.6]
+ [enhancement [fj-core] update fj-test-helper8 version to 0.3.1 (serialization support) (support for serialization test) [8.2.0-rc.6]
+ [enhancement [fj-core] added utilities to close Closeable and AutoCloseable [8.2.0-rc.5]
+ [enhancement [fj-core] conversion utilities for ConfigException and ConfigRuntimeException [8.2.0-rc.3]
+ [enhancement [to reduce hierarchy depth, if the correct interfaces have been used, this should have no impact] :
+ [enhancement][fj-core] Changed hierarchy of GenericListCatalogConfig to directly extends AbstractConfigurableObject [8.2.0-rc.1]
+ [enhancement][fj-core] Changed hierarchy of AbstractConfigurableObject to directly extends Object [8.2.0-rc.1]

8.1.0 (2023-08-20)
------------------
+ [enhancement][fj-core] Added factory methods for XMLConfigurableObject [8.1.0-rc.2]
+ [enhancement][fj-core] Facilities for converting exceptions [8.1.0-rc.1]
+ [enhancement][fj-lib] [added sonar cloud quality gate](https://github.com/fugerit-org/fj-lib/issues/21) [8.1.0-rc.1]

8.0.13 (2023-08-01)
------------------
+ Added accessor for ConfigProvider in AbstractConfigurableObject

8.0.12-rc.001 (2023-07-31)
------------------
+ Fixed MiniFilterConfig load compatibility

8.0.11-rc.002 (2023-07-14)
------------------
+ Added MiniFilterMap
+ Updated bom to 1.2.3

8.0.9 (2023-03-29)
------------------
+ Parameter set in DAOHelper set to TRACE

8.0.8 (2023-03-29)
------------------
+ Improved DAOUtilsNG debugging

8.0.7 (2023-03-29)
------------------
+ Further improved BasicDAOHelper debugging

8.0.5 (2023-03-28)
------------------
+ Improved BasicDAOHelper debugging

8.0.4 (2023-03-26)
------------------
+ changed fj-bom version to 1.0.0