@@ -1,32 +1,0 @@
-package org.fugerit.java.core.jvfs.db.daogen.facade;
-
-import org.fugerit.java.core.db.dao.DAOException;
-
-// custom import start ( code above here will be overwritten )
-// custom import end ( code below here will be overwritten )
-
-/**
- * JvfsLogicFacadeHelper, version : 1.0.0
- *
- * author: fugerit
- *
- * warning!: auto generated object, insert custom code only between comments :
- * // custom code start ( code above here will be overwritten )
- * // custom code end ( code below here will be overwritten )
- */
-public interface JvfsLogicFacadeHelper {
-
-	// custom code start ( code above here will be overwritten )
-	// custom code end ( code below here will be overwritten )
-
-	public static final String ATT_NAME = "JvfsLogicFacadeHelper";
-
-	/**
-	 * Facade incapsulating persistance for entity : DB_JVFS_FILE
-	 *
-	 * @return	the facade
-	 * @throws DAOException	in case of problems
-	 */
-	org.fugerit.java.core.jvfs.db.daogen.def.facade.EntityDbJvfsFileFacade getEntityDbJvfsFileFacade() throws DAOException;
-
-}
